fixes autoscroll and double scroll bar bugs

--- a/beatspeakers-1/src/index.css
+++ b/beatspeakers-1/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body{
+  overflow: hidden;
+  
+}
 #root{
  
     margin: 0px;
@@ -11,7 +14,7 @@
 }
 
 #header{
-  overflow:auto;
+  overflow:scroll;
   background-image: url(assets/background.jpg);
   background-size: cover;
   background-position: center;
